tests/005.out
Setting source port but protocol is not udp nor tcp
Error: Failed setting rule
-A INPUT --source-port 1900 -j DROP
                       ^^^^^
Failed parsing input
